# setuppy

./: .gitignore  README.md
running/: LICENSE  setup.cfg  setup.py
running/src/helloworld/: __main__.py
