[metadata]
name = helloworld 
description = helloworld test
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = xiaoming 
author_email = xiaoming@abc.com
maintainer = xiaoming 
maintainer_email = xiaoming@abc.com 
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = helloworld 
project_urls =
    Source=''
    Tracker=''

[options]
packages = find:
install_requires =
python_requires = >=3.7
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    helloworld=helloworld.__main__:run_helloworld

[options.extras_require]

[options.package_data]

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[tool:pytest]
markers =
    slow
junit_family = xunit2
addopts = --tb=auto -ra --showlocals --no-success-flaky-report
env =
    PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
    PYTHONIOENCODING=utf-8
